--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "node": "8.x"
     },
     "dependencies": {
-        "child-process": "^1.0.2"
+        "child-process": "^1.0.2",
+        "node-fetch": "^2.3.0"
     },
     "devDependencies": {
         "os": "^0.1.1"
